[tool.poetry]
name = "haspamarathon"
version = "0.1.0"
description = ""
authors = ["Christian Murschall <christian@murschall.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.12.2"
pandas = "^2.0.1"
matplotlib = "^3.7.1"
geopandas = "^0.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
