[tool.poetry]
name = "hamburgmarathon"
version = "0.1.0"
description = ""
authors = ["Christian Murschall <christian.murschall@coherent.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.3"
bs4 = "^0.0.1"
geopy = "^2.3.0"
matplotlib = "^3.7.1"
pandas = "^2.0.1"
geopandas = "^0.13.0"
numpy = "^1.24.3"
scipy = "^1.10.1"
tqdm = "^4.65.0"
requests = "^2.30.0"
lxml = "^4.9.2"
ffmpeg = "^1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
